--- a/timetable.html
+++ b/timetable.html
@@ -12,10 +12,10 @@
     <div class="nav">
         <div class="menu">
             <img id="logo" src="scl-logo.png" alt="school logo">
-            <a href="index.html">Home</a>
+            <a href="welcome.html">Home</a>
             <a href="Student.html">Student Details</a>
             <a href="timetable.html">Time Table</a>
-
+            <a href="index.html">Logout</a>
         </div>
     </div>
     <div class="mainouter">
