--- a/welcome.html
+++ b/welcome.html
@@ -16,17 +16,10 @@
             <a href="index.html">Logout</a>
         </div>
     </div>
-    <div class="mainouter">
-        <div class="main">
-            <img id="image" src="student.png" alt="student image" width="200px" height="200">
-            <div class="stud-info">
-                <p id="stuname">Name : Aman Sahu</p>
-                <p id="stuemail">Email : amansahu.dev@gmail.com</p>
-                <p id="company">Company : SLK Software</p>
-                <p>Education status: Graduated</p>
-            </div>
-        </div>
+    <div class="welcome">
+        <img src="scl-logo.png" alt="school logo" id="welcomelogo">
+        <h1>~~~ Welcome ~~~</h1>
+        <h2>Spring Flower School</h2>
     </div>
-    <script src="index.js"></script>
 </body>
 </html>
