--- a/index.html
+++ b/index.html
@@ -1,24 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spring Flower</title>
+    <title>Login Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="nav">
         <div class="menu">
             <img id="logo" src="scl-logo.png" alt="school logo">
-            <a href="#">Home</a>
-            <a href="Student.html">Student Details</a>
-            <a href="timetable.html">Time Table</a>
+            <h1 style="color: white;">Spring Flower School</h1>
         </div>
     </div>
-    <div class="welcome">
-        <img src="scl-logo.png" alt="school logo" id="welcomelogo">
-        <h1>~~~ Welcome ~~~</h1>
-        <h2>Spring Flower School</h2>
+    <div class="indexpage">
+        <div class="card">
+            <div class="heading">
+                <h2>Login</h2>
+            </div>
+            <div class="outerdiv">
+                <div class="box">
+                    <label for="name">Name</label>
+                    <input type="text" name="name" id="name" placeholder="Enter your name" required>
+                </div>
+                <div class="box">
+                    <label for="password">Password</label>
+                    <input type="password" id="password" placeholder="Enter your password" required>
+                    <p><a href="#signname">Don't have an account ?</a></p>
+                </div>
+                <div class="box btnbox">
+                    <button type="submit" onclick="login()">Login</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="heading">
+                <h2>Signup</h2>
+            </div>
+            <div class="outerdiv">
+                <div class="box">
+                    <label for="signname">Name</label>
+                    <input type="text" name="name" id="signname" placeholder="Enter your name" required>
+                </div>
+                <div class="box">
+                    <label for="signpassword">Password</label>
+                    <input type="password" id="signpassword" placeholder="Enter your password" required>
+                </div>
+                <div class="box">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" placeholder="Enter your email" required>
+                    <p><a href="#name">Already have an account ?</a></p>
+                    <p id="passtext"></p>
+                </div>
+                <div class="box btnbox">
+                    <button type="submit" onclick="signup()">Signup</button>
+                </div>
+            </div>
+        </div>
     </div>
+    <script src="index.js"></script>
 </body>
+
 </html>
