--- a/Student.html
+++ b/Student.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spring Flower</title>
     <link rel="stylesheet" href="style.css">
+    <script src="index.js"></script>
 </head>
+
 <body>
     <div class="nav">
         <div class="menu">
             <img id="logo" src="scl-logo.png" alt="school logo">
             <a href="welcome.html">Home</a>
+            <a href="monthly.html">Monthly Chart</a>
             <a href="Student.html">Student Details</a>
             <a href="timetable.html">Time Table</a>
             <a href="index.html">Logout</a>
@@ -27,6 +31,17 @@
             </div>
         </div>
     </div>
-    <script src="index.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const username = sessionStorage.getItem('username');
+            const userpass = sessionStorage.getItem('userpass');
+            const useremail = sessionStorage.getItem('useremail');
+            const stuname = document.getElementById('stuname');
+            const stuemail = document.getElementById('stuemail');
+            stuname.innerText = `Name: ${username}`;
+            stuemail.innerText = `Email: ${useremail}`;
+        });
+    </script>
 </body>
+
 </html>
