--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <p><a href="#signname">Don't have an account ?</a></p>
                 </div>
                 <div class="box btnbox">
-                    <button type="submit" onclick="login()">Login</button>
+                    <button type="submit" onclick="loginbtn()">Login</button>
                 </div>
             </div>
         </div>
