--- a/timetable.html
+++ b/timetable.html
@@ -13,6 +13,7 @@
         <div class="menu">
             <img id="logo" src="scl-logo.png" alt="school logo">
             <a href="welcome.html">Home</a>
+            <a href="monthly.html">Monthly Chart</a>
             <a href="Student.html">Student Details</a>
             <a href="timetable.html">Time Table</a>
             <a href="index.html">Logout</a>
