--- a/welcome.html
+++ b/welcome.html
@@ -11,8 +11,9 @@
         <div class="menu">
             <img id="logo" src="scl-logo.png" alt="school logo">
             <a href="welcome.html">Home</a>
+            <a href="monthly.html">Monthly Chart</a>
             <a href="Student.html">Student Details</a>
-            <a href="timetable.html">Time Table</a>
+            <a href="timetable.html" id="studentpage">Time Table</a>
             <a href="index.html">Logout</a>
         </div>
     </div>
@@ -21,5 +22,6 @@
         <h1>~~~ Welcome ~~~</h1>
         <h2>Spring Flower School</h2>
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
