--- a/timetable.html
+++ b/timetable.html
@@ -19,6 +19,7 @@
             <a href="index.html">Logout</a>
         </div>
     </div>
+    <h1 style="text-align: center;">Time Table</h1>
     <div class="mainouter">
         <div class="main">
             <table>
