sixth commit extra activty page added

--- a/Student.html
+++ b/Student.html
@@ -20,6 +20,7 @@
             <a href="index.html">Logout</a>
         </div>
     </div>
+    <h1 style="text-align: center;">Student Details</h1>
     <div class="mainouter">
         <div class="main">
             <img id="image" src="student.png" alt="student image" width="200px" height="200">
