--- a/extra.html
+++ b/extra.html
@@ -18,7 +18,7 @@
             <a href="index.html">Logout</a>
         </div>
     </div>
-    <h1 style="text-align: center;">Extra ACTIVITIES</h1>
+    <h1 class="headingh1" style="text-align: center;">Extra ACTIVITIES  <span class="userontop"></span></h1>
     <div class="extrabox">
         <div class="monthlyform">
             <h1 class="heading">Add Activity</h1>
@@ -32,5 +32,12 @@
         </div>
     </div>
     <script src="index.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const username = sessionStorage.getItem('username');
+            const userontop = document.getElementsByClassName('userontop')[0];
+            userontop.innerText = username;
+        });
+    </script>
 </body>
 </html>
