--- a/monthly.html
+++ b/monthly.html
@@ -18,7 +18,7 @@
             <a href="index.html">Logout</a>
         </div>
     </div>
-    <h1 class="headingh1" style="text-align: center;">MONTHLY ACTIVITIES <span class="userontop"></span></h1>
+    <h1 class="headingh1" style="text-align: center;">MONTHLY ACTIVITIES <i class="fa-solid fa-user"></i><span class="userontop"></span></h1>
     <div class="monthlybox">
         <div class="monthlyform">
             <h1 class="heading">Add Activity</h1>
@@ -42,5 +42,6 @@
             userontop.innerText = username;
         });
     </script>
+    <script src="https://kit.fontawesome.com/c46c72e4b7.js" crossorigin="anonymous"></script>
 </body>
 </html>
