--- a/welcome.html
+++ b/welcome.html
@@ -20,7 +20,7 @@
             <a href="index.html">Logout</a>
         </div>
     </div>
-    <h1 class="headingh1" style="text-align: center;">Daily Activities <span class="userontop"></span></h1>
+    <h1 class="headingh1" style="text-align: center;">Daily Activities<i class="fa-solid fa-user"></i><span class="userontop"></span></h1>
     <div class="welcome">
         <div id="extra">
 
@@ -45,6 +45,7 @@
         });
 
     </script>
+    <script src="https://kit.fontawesome.com/c46c72e4b7.js" crossorigin="anonymous"></script>
     <script src="index.js"></script>
 </body>
 
