--- a/Student.html
+++ b/Student.html
@@ -20,7 +20,7 @@
             <a href="index.html">Logout</a>
         </div>
     </div>
-    <h1 class="headingh1" style="text-align: center;">Student Details <span class="userontop"></span></h1>
+    <h1 class="headingh1" style="text-align: center;">Student Details <i class="fa-solid fa-user"></i><span class="userontop"></span></h1>
     <div class="mainouter">
         <div class="main">
             <img id="image" src="student.png" alt="student image" width="200px" height="200">
@@ -45,6 +45,7 @@
             stuemail.innerText = `Email: ${useremail}`;
         });
     </script>
+    <script src="https://kit.fontawesome.com/c46c72e4b7.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
