--- a/extra.html
+++ b/extra.html
@@ -18,7 +18,7 @@
             <a href="index.html">Logout</a>
         </div>
     </div>
-    <h1 class="headingh1" style="text-align: center;">Extra ACTIVITIES  <span class="userontop"></span></h1>
+    <h1 class="headingh1" style="text-align: center;">Extra ACTIVITIES  <i class="fa-solid fa-user"></i><span class="userontop"></span></h1>
     <div class="extrabox">
         <div class="monthlyform">
             <h1 class="heading">Add Activity</h1>
@@ -39,5 +39,6 @@
             userontop.innerText = username;
         });
     </script>
+    <script src="https://kit.fontawesome.com/c46c72e4b7.js" crossorigin="anonymous"></script>
 </body>
 </html>
