--- a/timetable.html
+++ b/timetable.html
@@ -19,7 +19,7 @@
             <a href="index.html">Logout</a>
         </div>
     </div>
-    <h1  class="headingh1" style="text-align: center;">Time Table <span class="userontop"></span></h1>
+    <h1  class="headingh1" style="text-align: center;">Time Table <i class="fa-solid fa-user"></i><span class="userontop"></span></h1>
     <div class="mainouter">
         <div class="main">
             <table>
@@ -100,6 +100,7 @@
             userontop.innerText = username;
         });
     </script>
+    <script src="https://kit.fontawesome.com/c46c72e4b7.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
